# txtble

./: .travis.yml  CHANGELOG.md  MANIFEST.in  README.rst  TODO.md  pyproject.toml  setup.cfg  setup.py  tabulator.py  tox.ini  txtble.py
src/txtble/: __init__.py  border_style.py  classes.py  errors.py  util.py
test/: test_align.py  test_align_index.py  test_ansi_colors.py  test_ansi_regexes.py  test_bad_width.py  test_border_style.py  test_borders.py  test_cell_class.py  test_cell_span.py  test_data.py  test_dictrows.py  test_header_span.py  test_hrule.py  test_len_func.py  test_newlines.py  test_nonstr.py  test_numalign.py  test_padding.py  test_plain.py  test_ragged.py  test_side_borders.py  test_unicode.py  test_util.py  test_valign.py  test_wrap.py  test_wrap_func.py
txtble/: __init__.py  border_style.py  classes.py  errors.py  util.py
