[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "txtble"
dynamic = ["version"]
description = "Yet another plain-text table typesetter"
readme = "README.rst"
requires-python = ">=3.8"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "John Thorvald Wodder II", email = "txtble@varonathe.org" }
]

keywords = [
    "box-drawing",
    "grid",
    "table",
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: User Interfaces",
    "Topic :: Text Processing",
    "Typing :: Typed",
]

dependencies = [
    "attrs   >= 18.1",
    "wcwidth ~= 0.2.9",
]

[project.urls]
"Source Code" = "https://github.com/jwodder/txtble"
"Bug Tracker" = "https://github.com/jwodder/txtble/issues"

[tool.hatch.version]
path = "src/txtble/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/docs",
    "/src",
    "/test",
    "CHANGELOG.*",
    "CONTRIBUTORS.*",
    "tox.ini",
]

[tool.hatch.envs.default]
python = "3"

[tool.mypy]
allow_incomplete_defs = false
allow_untyped_defs = false
ignore_missing_imports = false
# <https://github.com/python/mypy/issues/7773>:
no_implicit_optional = true
implicit_reexport = false
local_partial_types = true
pretty = true
show_error_codes = true
show_traceback = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = "wcwidth.*"
ignore_missing_imports = true
