[metadata]
name = txtble
version = attr:txtble.__version__
description = Yet another plain-text table typesetter
long_description = file:README.rst
long_description_content_type = text/x-rst
author = John Thorvald Wodder II
author_email = txtble@varonathe.org
license = MIT
license_files = LICENSE
url = https://github.com/jwodder/txtble

keywords =
    box-drawing
    grid
    table

classifiers =
    Development Status :: 4 - Beta
    #Development Status :: 5 - Production/Stable
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    License :: OSI Approved :: MIT License
    Intended Audience :: Developers
    Topic :: Software Development :: User Interfaces
    Topic :: Text Processing
    Typing :: Typed

project_urls =
    Source Code = https://github.com/jwodder/txtble
    Bug Tracker = https://github.com/jwodder/txtble/issues

[options]
packages = find:
package_dir =
    =src
include_package_data = True
python_requires = ~=3.6
install_requires =
    attrs   >= 18.1
    wcwidth ~= 0.2.0

[options.packages.find]
where = src

[mypy]
ignore_missing_imports = True
disallow_untyped_defs = True
disallow_incomplete_defs = True
no_implicit_optional = True
warn_redundant_casts = True
warn_return_any = True
warn_unreachable = True
local_partial_types = True
no_implicit_reexport = True
strict_equality = True
no_error_summary = True
show_traceback = True
